Fix #112068: Crash when loading converted curves