source/blender/blenkernel/intern/grease_pencil.cc
@@ -2048,14 +2048,20 @@ static void read_drawing_array(GreasePencil &grease_pencil, BlendDataReader *rea
 
 static void write_drawing_array(GreasePencil &grease_pencil, BlendWriter *writer)
 {
+  using namespace blender;
   BLO_write_pointer_array(writer, grease_pencil.drawing_array_num, grease_pencil.drawing_array);
   for (int i = 0; i < grease_pencil.drawing_array_num; i++) {
     GreasePencilDrawingBase *drawing_base = grease_pencil.drawing_array[i];
     switch (drawing_base->type) {
       case GP_DRAWING: {
         GreasePencilDrawing *drawing = reinterpret_cast<GreasePencilDrawing *>(drawing_base);
+        Vector<CustomDataLayer, 16> point_layers;
+        Vector<CustomDataLayer, 16> curve_layers;
+        CustomData_blend_write_prepare(drawing->geometry.point_data, point_layers);
+        CustomData_blend_write_prepare(drawing->geometry.curve_data, curve_layers);
         BLO_write_struct(writer, GreasePencilDrawing, drawing);
-        drawing->wrap().strokes_for_write().blend_write(*writer, grease_pencil.id);
+        drawing->wrap().strokes_for_write().blend_write(
+            *writer, point_layers, curve_layers, grease_pencil.id);
         break;
       }
       case GP_DRAWING_REFERENCE: {
